developer/src/kmc-package/test/fixtures/invalid/WARN_PackageNameDoesNotFollowLexicalModelConventions.kps
<?xml version="1.0" encoding="utf-8"?>
<!-- the file name is not valid for model packages -->
<Package>
  <System>
    <KeymanDeveloperVersion>15.0.266.0</KeymanDeveloperVersion>
    <FileVersion>7.0</FileVersion>
  </System>
  <Info>
    <Name URL="">SENĆOŦEN (Saanich Dialect) Lexical Model</Name>
    <Copyright URL="">© 2019 National Research Council Canada</Copyright>
    <Author URL="mailto:Eddie.Santos@nrc-cnrc.gc.ca">Eddie Antonio Santos</Author>
    <Version>1.0.3</Version>
  </Info>
  <Files>
    <File>
      <Name>example.qaa.sencoten.model.js</Name>
      <Description>Lexical model example.qaa.sencoten.model.js</Description>
      <CopyLocation>0</CopyLocation>
      <FileType>.model.js</FileType>
    </File>
  </Files>
  <LexicalModels>
    <LexicalModel>
      <Name>SENĆOŦEN dictionary</Name>
      <ID>example.qaa.sencoten</ID>
      <Languages>
        <Language ID="qaa">North Straits Salish</Language>
        <Language ID="qaa-Latn">SENĆOŦEN</Language>
      </Languages>
    </LexicalModel>
  </LexicalModels>
</Package>
